[gd_scene load_steps=3 format=3 uid="uid://chfrdede41efk"]

[ext_resource type="Script" path="res://StarFighter/UI/GameHUD.gd" id="1_oxoxw"]
[ext_resource type="Theme" uid="uid://cjrv5jy5nkdik" path="res://StarFighterTheme.tres" id="2_pg7sw"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_oxoxw")
red_amount = null
green_amount = null
blue_amount = null

[node name="InvContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.012
anchor_top = 0.789
anchor_right = 0.206
anchor_bottom = 0.978
offset_left = 0.639999
offset_top = -0.0800171
offset_right = 0.319977
offset_bottom = -0.160034
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="InvContainer"]
layout_mode = 2
alignment = 1

[node name="TextRed" type="Label" parent="InvContainer/Labels"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 2
theme = ExtResource("2_pg7sw")
text = "R:"
uppercase = true

[node name="TextGreen" type="Label" parent="InvContainer/Labels"]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme = ExtResource("2_pg7sw")
text = "G:"
uppercase = true

[node name="TextBlue" type="Label" parent="InvContainer/Labels"]
self_modulate = Color(0, 0, 1, 1)
layout_mode = 2
theme = ExtResource("2_pg7sw")
text = "B:"
uppercase = true

[node name="Amounts" type="VBoxContainer" parent="InvContainer"]
layout_mode = 2
alignment = 1

[node name="RedAmount" type="Label" parent="InvContainer/Amounts"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 2
theme = ExtResource("2_pg7sw")
text = "0
"

[node name="GreenAmount" type="Label" parent="InvContainer/Amounts"]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme = ExtResource("2_pg7sw")
text = "0
"

[node name="BlueAmount" type="Label" parent="InvContainer/Amounts"]
self_modulate = Color(0, 0, 1, 1)
layout_mode = 2
theme = ExtResource("2_pg7sw")
text = "0"
